--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "maptalks-react",
-    "description": "maptalks-React版", 
+    "description": "maptalks-React版",
     "private": false,
     "version": "0.0.0",
     "type": "module",
@@ -12,12 +12,9 @@
         "docs:build": "dumi build",
         "docs:dev": "dumi dev"
     },
-    "publishConfig": {
-        "registry": "https://dev.scet.com.cn/verdaccio/"
-    },
+    "publishConfig": {},
     "author": "DB-Thor@outlook.com",
     "license": "MIT",
-
     "files": [
         "dist"
     ],
@@ -55,8 +52,6 @@
         "path": "^0.12.7",
         "postcss": "^8.4.30",
         "postcss-loader": "^7.3.3",
-        "prettier-plugin-organize-imports": "^3.2.3",
-        "prettier-plugin-packagejson": "^2.4.5",
         "react-router-dom": "^6.16.0",
         "style-loader": "^3.3.3",
         "tailwindcss": "^3.3.3",
