--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "eslint": "^8.45.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.3",
+        "nanoid": "^5.0.1",
         "path": "^0.12.7",
         "postcss": "^8.4.30",
         "postcss-loader": "^7.3.3",
@@ -60,5 +61,8 @@
         "vite-plugin-compression2": "^0.10.5",
         "vite-plugin-css-injected-by-js": "^3.3.0",
         "vite-plugin-dts": "^3.5.4"
+    },
+    "peerDependencies": {
+        "nanoid": "^5.0.1"
     }
 }
