--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "@typescript-eslint/parser": "^6.0.0",
         "@vitejs/plugin-react-swc": "^3.3.2",
         "autoprefixer": "^10.4.16",
+        "cross-env": "^7.0.3",
         "css-loader": "^6.8.1",
         "dumi": "^2.2.12",
         "eslint": "^8.45.0",
